trunk/Archive2/cc/63774078913204/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:61:12: error: array type 'int [7]' is not assignable
    sorted = mergeSort(arr,7);
    ~~~~~~ ^
1 error generated.
